# dodai

./: .env.example  .gitignore  AGENTS.md  HACKATHON.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.hackathon/: submission.local.example.md
docs/: PRODUCT_JOURNEY.md
docs/adr/: 0001-bounded-model-generation.md  0002-governed-origin-transactions.md  0003-configured-projection-kinds.md  0004-guided-local-product-bets.md  0005-presentation-evidence-and-failure-diagnosis.md  0006-bounded-codex-delegation.md  0007-static-delegated-product-contract.md  0008-evidence-guided-redelegation.md  0009-presentation-repair-inner-loop.md  0010-evidence-led-problem-rediscovery.md
examples/telemetry/: exit-condition.yaml  guardrail-breach.yaml
origin/: 01-definitions.yaml  02-user-stories.yaml  03-acceptance-criteria.yaml  04-test-specifications.yaml  README.md
pins/: presentation-map.yaml  sample.yaml
projections/: evidence.yaml  manifest.yaml
projections/developer/: test_waitlist.py  waitlist.py
projections/stakeholder/: brief.md
scripts/: demo-web.sh  demo.sh
src/dodai/: __init__.py  cli.py  delegation.py  environment.py  evidence.py  evolution.py  learning.py  localization.py  origin.py  outer_loop.py  portal.py  product.py  projection.py  (+3 more)
submission/: DEMO_SCRIPT.md  DEVPOST.md  THIRD_PARTY.md
tests/: conftest.py  test_cli_evolution.py  test_delegation.py  test_environment.py  test_evolution.py  test_learning.py  test_origin.py  test_outer_loop.py  test_portal.py  test_projection.py  test_rebuild.py  test_showcase.py  test_workspace.py
(+1 files in other folders)
