[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "dodai"
version = "0.1.0"
description = "Origin-driven development projections for people and AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.99,<2",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "ruff>=0.12,<1",
  "types-PyYAML>=6.0,<7",
]

[project.scripts]
dodai = "dodai.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dodai"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["dodai"]
